creating icons and background (html)

--- a/portfolio.html
+++ b/portfolio.html
@@ -238,13 +238,64 @@
     <!-- =============== FOOTER =============== -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo-light logo link" href="./index.html">
-          <span class="part-logo-web">Web</span>Studio
-        </a>
-        <p class="footer-paragraph paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-about-container">
+          <a class="logo-light logo link" href="./index.html">
+            <span class="part-logo-web">Web</span>Studio
+          </a>
+          <p class="footer-about-paragraph paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <h2 class="paragraph footer-social-paragraph">Social media</h2>
+          <ul class="footer-social-list icon-list list">
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-instagram"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-twitter"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-facebook"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-linkedin"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- =============== /FOOTER =============== -->
