--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <h2 class="display-none">Our Qualities</h2>
           <ul class="flex-card-list">
             <li class="list our-qua-list-item">
+              <div class="our-qua-list-icon-container small-title">
+                <svg class="our-qua-list-icon" width="64px" height="64px">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="small-title">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +84,11 @@
               </p>
             </li>
             <li class="list our-qua-list-item">
+              <div class="our-qua-list-icon-container small-title">
+                <svg class="our-qua-list-icon" width="64px" height="64px">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="small-title">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +96,11 @@
               </p>
             </li>
             <li class="list our-qua-list-item">
+              <div class="our-qua-list-icon-container small-title">
+                <svg class="our-qua-list-icon" width="64px" height="64px">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="small-title">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +108,11 @@
               </p>
             </li>
             <li class="list our-qua-list-item">
+              <div class="our-qua-list-icon-container small-title">
+                <svg class="our-qua-list-icon" width="64px" height="64px">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="small-title">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -155,6 +175,65 @@
                 <p class="team-list-item-subtitle paragraph">
                   Product Designer
                 </p>
+                <ul class="team-list-card_social-list icon-list list">
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-twitter"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-facebook"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-linkedin"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list team-list-item">
@@ -169,6 +248,64 @@
                 <p class="team-list-item-subtitle paragraph">
                   Frontend Developer
                 </p>
+                <ul class="team-list-card_social-list icon-list list">
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-twitter"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-facebook"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-linkedin"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list team-list-item">
@@ -181,6 +318,64 @@
               <div class="team-list-card-title card-title">
                 <h3 class="team-list-item-title small-title">Camila Garcia</h3>
                 <p class="team-list-item-subtitle paragraph">Marketing</p>
+                <ul class="team-list-card_social-list icon-list list">
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-twitter"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-facebook"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-linkedin"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list team-list-item">
@@ -193,25 +388,211 @@
               <div class="team-list-card-title card-title">
                 <h3 class="team-list-item-title small-title">Daniel Wilson</h3>
                 <p class="team-list-item-subtitle paragraph">UI Designer</p>
+                <ul class="team-list-card_social-list icon-list list">
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-instagram"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-twitter"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-facebook"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-card_social-list-item">
+                    <a
+                      href=""
+                      class="team-list-card_social-list-link icon-background"
+                    >
+                      <svg class="team-list-card_social-list-icon">
+                        <use
+                          href="./images/sprite.svg#icon-linkedin"
+                          width="16px"
+                          height="16px"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
       <!-- =============== /OUR TEAM =============== -->
+
+      <!-- =============== CUSTOMERS =============== -->
+      <section class="section customers-section">
+        <div class="container">
+          <h2 class="medium-title customers-title">Customers</h2>
+          <ul class="customers-list icon-list list">
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-ya-and-co"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-company-tagline-here"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-company"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-foster-peters"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-brand"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="" class="customers-list-link">
+                <svg class="customers-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-company-tag-line"
+                    width="104px"
+                    height="56px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- =============== /CUSTOMERS =============== -->
     </main>
     <!-- =============== /MAIN =============== -->
 
     <!-- =============== FOOTER =============== -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo-light logo link" href="./index.html">
-          <span class="part-logo-web">Web</span>Studio
-        </a>
-        <p class="footer-paragraph paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-about-container">
+          <a class="logo-light logo link" href="./index.html">
+            <span class="part-logo-web">Web</span>Studio
+          </a>
+          <p class="footer-about-paragraph paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <h2 class="paragraph footer-social-paragraph">Social media</h2>
+          <ul class="footer-social-list icon-list list">
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-instagram"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-twitter"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-facebook"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link icon-background">
+                <svg class="footer-social-list-icon">
+                  <use
+                    href="./images/sprite.svg#icon-linkedin"
+                    width="24px"
+                    height="24px"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- =============== /FOOTER =============== -->
