optimization (portfolio.html)

--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
 
     <!-- =============== FOOTER =============== -->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container display-flex">
         <div class="footer-about-container">
           <a class="logo-light logo link" href="./index.html">
             <span class="part-logo-web">Web</span>Studio
