--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
     <!-- =============== FOOTER =============== -->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container display-flex">
         <div class="footer-about-container">
           <a class="logo-light logo link" href="./index.html">
             <span class="part-logo-web">Web</span>Studio
