correcting portfolio cards (portfolio.html)

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
           <!-- =============== PORTFOLIO ELEMENT =============== -->
           <ul class="portfolio-element-list flex-card-list">
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/banking-app-interface-concept.jpg"
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/cashless-payment.jpg"
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/meditaion-app.jpg "
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/taxi-service.jpg"
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/screen-illustrations.jpg"
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/online-courses.jpg"
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/instagram-stories-concept.jpg"
@@ -197,7 +197,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/organic-food.jpg"
@@ -213,7 +213,7 @@
               </a>
             </li>
             <li class="portfolio-element-list-item list">
-              <a class="link" href="">
+              <a class="link portfolio-element-list-link" href="">
                 <img
                   class="portfolio-element-list-img"
                   src="./images/portfolio/fresh-coffee.jpg"
